--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,6 @@ DB_USER=root
 DB_PASSWORD=imLtNiCDnolhtEQrGyytDTeJeFBiMXRu
 DB_NAME=railway
 DB_PORT=12116
+VITE_API_BASE_URL=https://fullinteractivelesson-production.up.railway.app
+CORS_ORIGINS=http://localhost:5173,https://interactive-lesson.vercel.app
+
